[package]
name = "mju-bits"
version = "0.1.0"
authors = ["David Kern <david@mju.io>"]
license = "Apache-2.0"
repository = "https://github.com/davidkern/mju-bits"
description = "no_std typed bitfield access for u8, u16, u32 and u64"
documentation = "https://docs.rs/mju-bits/0.1.0"
keywords = ["bit", "bitfield", "no_std"]
categories = ["data-structures", "embedded", "encoding", "no-std"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typenum = "1.11.2"

[dev-dependencies]
version-sync = "0.8"
